--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cheapshark" >
+    package="com.example.cheapshark">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,7 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Cheapshark" >
+        android:theme="@style/Theme.Cheapshark">
+        <activity
+            android:name=".controlador.Preferencias"
+            android:exported="false" />
         <activity
             android:name=".controlador.SecondActivity"
             android:exported="true" />
@@ -18,7 +22,7 @@
             android:exported="true" />
         <activity
             android:name=".controlador.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
