--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }//ionalert - Android Alert Dialog biblioteca externa para los AlertDialog
+
     }
 }
 rootProject.name = "cheapshark"
